# prac_rs_cpp

./: CMakeLists.txt  capture.cpp  main.cpp
